k8s/base/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: war-climate-analytics-frontend
  namespace: app
spec:
  selector:
    app: war-climate-analytics-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
